# pr-tester

./: .pr-test-runner.yml  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-04-21-pr-test-runner.md
docs/superpowers/specs/: 2026-04-21-pr-test-runner-design.md
pr_test_runner/: cli.py  git.py  github.py  resolver.py  runner.py
tests/: test_cli.py  test_git.py  test_github.py  test_resolver.py  test_runner.py
