[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pr-test-runner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.24.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
pr-test-runner = "pr_test_runner.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pr_test_runner"]
